scrollbar fix chrome

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,30 +22,30 @@ body {
     "Segoe UI Symbol";
 }
 
-/* Hide scrollbar for Chrome, Safari, and Opera */
-body::-webkit-scrollbar {
-  display: none;
-}
 
-/* Hide scrollbar for IE and Edge */
-body {
-  -ms-overflow-style: none;
-}
-
-/* Hide scrollbar for Firefox */
-body {
-  scrollbar-width: none;
-}
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: 0; /* Firefox */
   }
 }
 
 @layer base {
   html {
     @apply scroll-smooth;
+  }
+  body {
+    @apply no-scrollbar
   }
 }
 
